[package]
name = "rcut"
version = "0.2.3"
edition = "2021"
description = "rcut is a cut like program written in rust, with full string delimiters"
authors = ["Haoxi Tan"]
license-file = "LICENSE"
license = "GPL-3.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
libc = "0.2.137"

[[bin]]
name = "rcut"
path = "rcut.rs"
